cks/03-ingress-with-tls/02-secure-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: secure-ingress
  namespace: spotify
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  tls:
  - hosts:
      - secure-domain.com
    secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: secure-domain.com
    http:
      paths:
      - backend:
          service:
            name: service1
            port:
              number: 80
        path: /service1
        pathType: Prefix
      - backend:
          service:
            name: service2
            port:
              number: 80
        path: /service2
        pathType: Prefix
status:
  loadBalancer: {}
